--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "author": "Shahid N. Shah",
     "license": "MIT",
     "dependencies": {
-        "@shah/uniform-resource": "0.6.0",
+        "@shah/ts-pipe": "0.1.1",
+        "@shah/uniform-resource": "0.7.1",
         "whatwg-mimetype": "^2.3.0"
     },
     "bugs": {
